# a2a-protocol

./: AGENT.md  README.md  package-lock.json  package.json  pyproject.toml  wrangler.toml
.github/workflows/: ci-node.yml
a2a_protocol/: __init__.py  capability.py  handshake.py  message.py  protocol.py  registry.py
src/: worker.ts
tests/: test_a2a.py
