[project]
name = "a2a-protocol"
version = "1.0.0"
description = "Agent-to-Agent communication protocol: messages, handshakes, and capability exchange"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
